# Repetitor

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.dev.yaml  pyproject.toml
repetitor/: manage.py
repetitor/accounts/: admin.py  apps.py
repetitor/accounts/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_email.py
repetitor/accounts/models/: user.py
repetitor/balance/: admin.py  apps.py
repetitor/balance/migrations/: 0001_initial.py
repetitor/balance/models/: __init__.py  balance.py  transaction.py
repetitor/clients/: admin.py  apps.py
repetitor/clients/migrations/: 0001_initial.py  0002_alter_group_people.py  0002_person.py
repetitor/clients/models/: __init__.py  client.py  group.py  person.py
repetitor/project/: api_urls.py  urls.py
repetitor/project/settings/: __init__.py  base.py  development.py  envvars.py
repetitor/project/settings/components/: authentication.py  logging.py  rest_framework.py  storage.py
repetitor/schedule/: admin.py  apps.py  permissions.py  signals.py  urls.py  validators.py
repetitor/schedule/migrations/: 0001_initial.py  0002_rename_ends_at_appointment_end_and_more.py
repetitor/schedule/models/: __init__.py  appointment.py  schedule.py
repetitor/schedule/serializers/: __init__.py  appointment.py
repetitor/schedule/viewsets/: __init__.py  appointment.py
scripts/: entrypoint.sh  worker-entrypoint.sh
tests/: conftest.py
tests/test_schedule/: test_signals.py  test_views.py
