[tool.poetry]
name = "repetitor"
version = "0.1.0"
description = ""
authors = ["Evgenii Gusev <ged1994@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
whitenoise = "^6.7.0"
django = "^5.0.7"
django-cors-headers = "^4.4.0"
django-environ = "^0.11.2"
djangorestframework = "^3.15.2"
gunicorn = "^22.0.0"
psycopg2 = "^2.9.9"
django-extensions = "^3.2.3"
dj-rest-auth = "^6.0.0"
django-cleanup = "^8.1.0"
celery = "^5.4.0"
redis = "^5.0.7"
django-split-settings = "^1.3.2"
django-allauth = "^0.63.6"
djangorestframework-simplejwt = "^5.3.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
colorlog = "^6.8.2"
pre-commit = "^3.7.1"
pytest-django = "^4.8.0"
pytest-xdist = "^3.6.1"

[tool.isort]
line_length = 119
multi_line_output = 5

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "repetitor.project.settings"
django_find_project = false
python_files = "test_*.py"
testpaths = ["tests"]
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"

[tool.yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = "google"
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
